# alloy-ephemeral-lens

./: Cargo.toml  LICENSE  README.md  TokenLens.sol
contracts/: Proxy.sol
examples/: simple_call.rs
examples/ERC20_metadata/: TokenLens.sol  main.rs
examples/UniswapV4_poolState/: RegistryOverride.sol  main.rs
src/: call.rs  call_result.rs  contract.rs  lens.rs  lib.rs  middleware.rs
tests/: test.rs
